@@ -9,6 +9,8 @@ mm_min_matches = 200
 mm_min_matches_preference = 1.0
 
 # [SHOW]
+show_progress = true # is progress bar visible during ranking recalculation
+
 show_colors = true 
 # allowed colors: BLACK, RED, GREEN, YELLOW, BLUE, MAGENTA, CYAN, WHITE, DEFAULT (DEFAULT means using default terminal color)
 # you can also use BRIGHT_ and DIM_ prefixes (e.g. BRIGHT_RED) to make the color brighter/darker (note that DIM_ doesn't work in most terminals)
