@@ -1,6 +1,7 @@
 [current]
 * show/info: add color support for odd/even rows (configurable via cfg)
 * show: --include/--exclude recalculates ranking after include/excluding all bots matching specified regexes
+* progress bar when performing ranking recalculation (you can turn it off via cfg)
 * [fix] any ranking recalculation (usually removing a bot) would reset active status of all remaining bots 
 [0.4.1]
 * [fix] info, bot remove, bot update should correctly work games with 3+ players
